11월 28일 수업자료 업로드

--- a/09_Loop/exercise.ipynb
+++ b/09_Loop/exercise.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "68a64fd3",
    "metadata": {},
    "outputs": [
@@ -147,8 +147,8 @@
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    print(i)"
+    "class Dog:\n",
+    "    "
    ]
   },
   {
