--- a/12_Class/question.ipynb
+++ b/12_Class/question.ipynb
@@ -11,34 +11,55 @@
     "\n",
     "1. 클래스 속성 `species`를 설정하여 \"다람쥐\"로 초기화하세요.\n",
     "2. 생성자를 통해 인스턴스 속성 `name`과 `current_job`을 설정하세요.\n",
-    "3. 메서드 `introduce`를 만들어 이름과 현재 직업을 소개하는 문자열을 반환하세요.\n",
+    "3. 메서드 `introduce`를 만들어 이름과 현재 직업을 소개하는 문자열을 반환하세f요.\n",
     "4. 다른 인스턴스를 생성해도 `species`는 공유되지만, `name`과 `current_job`은 서로 독립적임을 확인하세요."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "10ceaa97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "저의 이름은 카피바라이고 직업은 전문가입니다.\n",
+      "저의 이름은 곰장어이고 직업은 낚시꾼입니다.\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "class Squirrel:\n",
     "    species = \"다람쥐\"\n",
+    "    name = \"바보\"\n",
+    "    current = \"job\"\n",
+    "\n",
     "    def __init__(self, name, current_job):\n",
     "        self.name = name\n",
     "        self.current_job = current_job\n",
-    "    def introduce(self):\n",
-    "        return f\"저의 이름은{self.name}이고 직업은 {self.current_job}입니다.\"\n",
-    "    \n",
-    "    p1 = Squirrel(\"카피바라\", \"전문가\")\n",
-    "    s1 = Squirrel(\"곰장어\", \"낚시꾼\")\n",
     "\n",
-    "    "
+    "    def introduce(self):\n",
+    "        return f\"저의 이름은 {self.name}이고 직업은 {self.current_job}입니다.\"\n",
+    "    \n",
+    "\n",
+    "p1 = Squirrel(\"카피바라\", \"전문가\")\n",
+    "\n",
+    "print(p1.introduce())\n",
+    "\n",
+    "s2 = Squirrel(\"곰장어\", \"낚시꾼\")\n",
+    "\n",
+    "print(s2.introduce())\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e07801a1",
    "metadata": {},
    "outputs": [
@@ -79,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a024cbac",
    "metadata": {},
    "outputs": [
@@ -96,11 +117,13 @@
     "    skills = []\n",
     "    def __init__(self):\n",
     "        self.skills = []\n",
+    "    \n",
     "    def add_skills(self, skill):\n",
     "        self.skills.append(skill)\n",
     "    \n",
     "c = Character()\n",
     "c.add_skills(\"화염\")\n",
+    "\n",
     "print(c.skills)\n",
     "    \n",
     "    \n",
@@ -122,17 +145,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "39cddf67",
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6f95f8e0",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "승훈\n"
+     ]
+    }
+   ],
    "source": [
+    "class Character:\n",
+    "    nickname = \"신승훈\"\n",
+    "    def __init__(self, nickname):\n",
+    "        self.nickname = nickname\n",
+    "\n",
+    "\n",
+    "c = Character(\"승훈\")\n",
+    "\n",
+    "print(c.nickname)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f95f8e0",
+   "id": "80c772e1",
    "metadata": {},
    "outputs": [],
    "source": []
