--- a/13_Instance/exercise.ipynb
+++ b/13_Instance/exercise.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "56854e55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class person:\n",
+    "class Person:\n",
     "    national = 'Korea'\n",
     "    language = 'korean'\n",
     "# class 만들때 메소드 안에 self를 받는다. \n",
@@ -27,31 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4c2ff160",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Person' is not defined",
+     "ename": "TypeError",
+     "evalue": "Person() takes no arguments",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m squirrel = \u001b[43mPerson\u001b[49m(\u001b[33m'\u001b[39m\u001b[33m다람쥐\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m900\u001b[39m)\n\u001b[32m      2\u001b[39m Gorilla = Person(\u001b[33m'\u001b[39m\u001b[33m고릴라\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m20\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(squirrel)    \u001b[38;5;66;03m# <__main__.Person object at 0x000002E16EE94560>\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'Person' is not defined"
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m squirrel = \u001b[43mPerson\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m다람쥐\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m900\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m Gorilla = Person(\u001b[33m'\u001b[39m\u001b[33m고릴라\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m20\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(squirrel)    \u001b[38;5;66;03m# <__main__.Person object at 0x000002E16EE94560>\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: Person() takes no arguments"
      ]
     }
    ],
    "source": [
-    "squirrel = Person('다람쥐', 900)\n",
-    "Gorilla = Person('고릴라', 20)\n",
+    "s = Person():\n",
+    "s = print('다람쥐', 900)\n",
+    "s = Person('고릴라', 20)\n",
     "\n",
     "print(squirrel)    # <__main__.Person object at 0x000002E16EE94560>\n",
     "print(Gorilla) \n",
     "\n",
     "\n",
-    "print(squirrel.national)            # korea\n",
+    "print(squirrel.national())            # korea\n",
     "print(squirrel.greeting())          # 안녕하세요\n",
     "print(Gorilla.information()) \n",
     "print(Gorilla.favorite())\n",
