--- a/14_Inheritance/exercise.ipynb
+++ b/14_Inheritance/exercise.ipynb
@@ -194,10 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de663029",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요, 저는 한국에서 왔습니다.\n",
+      "안녕하세요, 저는 capybara입니다. python분야에 관심이 있습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    national = \"Korea\"\n",
@@ -209,16 +218,19 @@
     "    def __init__(self, name, field):\n",
     "        self.name = name\n",
     "        self.field = field\n",
-    "\n",
-    "\n",
+    "    \n",
     "    def introduce(self):\n",
     "        return f\"안녕하세요, 저는 {self.name}입니다. {self.field}분야에 관심이 있습니다.\"\n",
-    "        \n",
-    "    p = Person()\n",
-    "    c = Candidate('capybara', 'python')\n",
     "\n",
-    "    print(p.introduce())\n",
-    "    print(c.introduce())\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "p = Person()\n",
+    "c = Candidate('capybara', 'python')\n",
+    "\n",
+    "print(p.introduce())\n",
+    "print(c.introduce())\n",
     "        "
    ]
   },
@@ -242,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "b8f6892f",
    "metadata": {},
    "outputs": [
@@ -250,18 +262,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "이직 준비를 도와드립니다.\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Mentor' object has no attribute 'teach'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     15\u001b[39m C = Coach()\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(m.guide())\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mteach\u001b[49m())\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(m.support())\n\u001b[32m     21\u001b[39m \u001b[38;5;28mprint\u001b[39m(l.guide())\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Mentor' object has no attribute 'teach'"
+      "이직 준비를 도와드립니다.\n",
+      "이직에 필요한 기술을 가르쳐드립니다.\n",
+      "여러 방면으로 지원을 아끼지 않겠습니다.\n"
      ]
     }
    ],
@@ -277,18 +280,13 @@
     "class Coach(Mentor, Lecturer):\n",
     "    def support(self):\n",
     "        return \"여러 방면으로 지원을 아끼지 않겠습니다.\"\n",
-    "    \n",
+    "\n",
+    "\n",
     "m = Mentor()\n",
     "l = Lecturer()\n",
     "C = Coach()\n",
     "\n",
-    "print(m.guide())\n",
-    "print(m.teach())\n",
-    "print(m.support())\n",
     "\n",
-    "print(l.guide())\n",
-    "print(l.teach())\n",
-    "print(l.support())\n",
     "\n",
     "print(C.guide())\n",
     "print(C.teach())\n",
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "abb96602",
    "metadata": {},
    "outputs": [
@@ -325,7 +323,7 @@
      "output_type": "stream",
      "text": [
       "안녕하세요 저는 capybara입니다 korea에서 왔습니다.\n",
-      "<bound method Candidate.introduce of <__main__.Candidate object at 0x0000018995AC5550>>\n"
+      "안녕하세요 제 이름은 홍길동이고, 이직 준비 중입니다.\n"
      ]
     }
    ],
@@ -355,7 +353,7 @@
     "print(p.introduce())\n",
     "\n",
     "c = Candidate('홍길동', '한국', '공부')\n",
-    "print(c.introduce)"
+    "print(c.introduce())"
    ]
   },
   {
@@ -380,20 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "896cb8f2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Candidate.__init__() missing 1 required positional argument: 'work'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[39]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mteach\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     13\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m저는 \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.experience\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m년의 강의 경력을 가지고 있습니다\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mCandidate\u001b[39;49;00m\u001b[43m(\u001b[49m\u001b[43mMentor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mLecturer\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfield\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexperience\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[43m        \u001b[49m\u001b[43mMentor\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfield\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[39]\u001b[39m\u001b[32m, line 26\u001b[39m, in \u001b[36mCandidate\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     24\u001b[39m m = Mentor(\u001b[33m'\u001b[39m\u001b[33mLLM\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     25\u001b[39m l = Lecturer(\u001b[32m850\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m c = \u001b[43mCandidate\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mAI\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m300\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[32m     28\u001b[39m \u001b[38;5;28mprint\u001b[39m(m. guide())\n\u001b[32m     29\u001b[39m \u001b[38;5;28mprint\u001b[39m(l. teach())\n",
-      "\u001b[31mTypeError\u001b[39m: Candidate.__init__() missing 1 required positional argument: 'work'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "저는 LLM 분야의 멘토입니다.\n",
+      "저는 850년의 강의 경력을 가지고 있습니다\n",
+      "저는 AI분야의 강사이며, 이직 준비를 도와드립니다.\n",
+      "저는 300년의 강의 경력을 가지고 있습니다\n"
      ]
     }
    ],
@@ -421,19 +417,20 @@
     "\n",
     "        return f\"저는 {self.field}분야의 강사이며, 이직 준비를 도와드립니다.\"\n",
     "    \n",
-    "    m = Mentor('LLM')\n",
-    "    l = Lecturer(850)\n",
-    "    c = Candidate('AI', '300') \n",
+    "m = Mentor('LLM')\n",
+    "l = Lecturer(850)\n",
+    "c = Candidate('AI', '300') \n",
     "\n",
-    "    print(m. guide())\n",
-    "    print(l. teach())\n",
-    "    print(c. guide())       \n",
+    "print(m. guide())\n",
+    "print(l. teach())\n",
+    "print(c. guide())       \n",
+    "print(c. teach())       \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "ee432ea4",
    "metadata": {},
    "outputs": [
@@ -490,6 +487,66 @@
     "    \n",
     "for each in (Dog(), Duck(), Fish(), Alarm()):\n",
     "    each.do()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba845e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da9b8832",
+   "metadata": {},
+   "source": [
+    "Smartphone이라는 클래스를 만드세요.\n",
+    "\n",
+    "속성은 다음과 같이 만드세요.\n",
+    "\n",
+    "brand : 스마트폰 브랜드\n",
+    "\n",
+    "model : 모델명\n",
+    "\n",
+    "battery : 배터리 잔량(%)\n",
+    "\n",
+    "메서드는 다음과 같이 만드세요.\n",
+    "\n",
+    "call(number) : \"번호 {number}로 전화 중...\" 출력\n",
+    "\n",
+    "charge(amount) : 배터리를 amount만큼 충전하고 \"배터리 잔량: {battery}%\" 출력 (단, 최대 100%)\n",
+    "\n",
+    "show_info() : \"브랜드: {brand}, 모델: {model}, 배터리: {battery}%\" 출력\n",
+    "\n",
+    "마지막으로 Smartphone 클래스 객체를 만들어서\n",
+    "\n",
+    "call(\"010-1234-5678\")\n",
+    "\n",
+    "charge(30)\n",
+    "\n",
+    "show_info()\n",
+    "세 메서드를 차례대로 실행하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2fd7d9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a59b03db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Smartphone():\n",
+    "    "
    ]
   }
  ],
