--- a/12_Class/exercise.ipynb
+++ b/12_Class/exercise.ipynb
@@ -157,41 +157,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d927ca5",
-   "metadata": {},
-   "source": [
-    "### **문제 3: 인스턴스 속성과 클래스 속성의 우선순위**\n",
-    "\n",
-    "다람쥐는 이직을 위해 별명을 여러 개 사용합니다. 클래스 속성으로 `nickname`을 설정하지만, 각 인스턴스마다 별명을 변경할 수 있습니다.\n",
-    "\n",
-    "1. `Character` 클래스에 클래스 속성 `nickname`을 설정하세요.\n",
-    "2. 생성자에서 인스턴스 속성 `nickname`을 설정하세요.\n",
-    "3. 클래스 속성과 인스턴스 속성이 충돌할 때, 인스턴스 속성이 우선됨을 확인하세요."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77f52fd1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "물에사는 카피바라\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Character:\n",
-    "    def nickname(self):\n",
-    "        \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d831b488",
    "metadata": {},
    "source": [
@@ -206,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a6235461",
    "metadata": {},
    "outputs": [
@@ -226,10 +191,13 @@
     "    local_tool = \"키보드\"\n",
     "\n",
     "    global tool\n",
+    "    \n",
     "    tool = \"펜\"\n",
     "\n",
     "    print(local_tool)\n",
     "    print(tool)\n",
+    "\n",
+    "\n",
     "\n",
     "namespace_test()"
    ]
@@ -272,13 +240,13 @@
     "    def add_tools(self,tool):\n",
     "        self.tools.append(tool)\n",
     "\n",
-    "Toolbox1 = Toolbox()\n",
-    "Toolbox1.add_tools('마우스')\n",
+    "tool_box1 = Toolbox()\n",
+    "tool_box1.add_tools('마우스')\n",
     "\n",
-    "Toolbox2 = Toolbox()\n",
-    "Toolbox2.add_tools('키보드')\n",
+    "tool_box2 = Toolbox()\n",
+    "tool_box2.add_tools('키보드')\n",
     "\n",
-    "print(Toolbox1.tools, Toolbox2.tools)\n",
+    "print(tool_box1.tools, tool_box2.tools)\n",
     "\n"
    ]
   },
@@ -297,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a41856ed",
    "metadata": {},
    "outputs": [
@@ -305,28 +273,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "작성 중\n"
+      "작성 중\n",
+      "완료\n"
      ]
     }
    ],
    "source": [
     "def nested_function():\n",
-    "    \n",
     "    status = '작성 중'\n",
-    "\n",
     "    def inner_function():\n",
     "        nonlocal status\n",
-    "        stauas = \"완료\"\n",
-    "\n",
+    "        status = \"완료\"\n",
+    "    print(status)\n",
     "    inner_function()\n",
     "    print(status)\n",
-    "\n",
+    "    \n",
     "nested_function()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "179b3046",
    "metadata": {},
    "outputs": [
@@ -341,7 +308,7 @@
     }
    ],
    "source": [
-    "class character:\n",
+    "class Character:\n",
     "    def __init__(self, nickname, type):\n",
     "        self.nickname = nickname\n",
     "        self.__type = type\n",
@@ -358,9 +325,10 @@
     "        \n",
     "        raise ValueError(\"잘못된 캐릭터 타입을 선택하셨습니다.\")\n",
     "    \n",
-    "my_character = character(\"카피바라\", \"전사\")\n",
+    "my_character = Character(\"카피바라\", \"전사\")\n",
     "\n",
     "print(my_character.nickname)\n",
+    "\n",
     "\n",
     "print(my_character.get_type())\n",
     "my_character.set_type(\"법사\")\n",
