파일 IO 및 예외처리 업로드

--- a/01_Variable/exercise.ipynb
+++ b/01_Variable/exercise.ipynb
@@ -449,6 +449,144 @@
     "\n",
     "replace() 메소드를 사용하세요."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de14ea9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_name = \"닌자\"\n",
+    "print(team_name)    # 닌자\n",
+    "\n",
+    "Team_name = \"파워레인져\"\n",
+    "print(team_name)    # 닌자\n",
+    "print(Team_name)    # Ninja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46930580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "우리팀 = \"닌자\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83313991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c0d5f68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)        # 10\n",
+    "print(_ * 3)    # 30``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee159222",
+   "metadata": {},
+   "source": [
+    "변수 이름은 스네이크 케이스를 따릅니다. (스네이크 케이스(소문자+언더바))\n",
+    "first_name에 당신의 이름의 첫 글자를 문자열로 저장하세요.\n",
+    "last_name에 당신의 성을 문자열로 저장하세요.\n",
+    "full_name 변수에 first_name과 last_name을 이어붙여서 저장하세요.\n",
+    "print()를 사용해 full_name을 출력해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "600ff4d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hong gil-dong\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = \"gil-dong\"\n",
+    "last_name = \"hong\"\n",
+    "full_name = first_name + last_name\n",
+    "\n",
+    "print(last_name, first_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aed5ebdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "1\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 1\n",
+    "num2 = 1\n",
+    "\n",
+    "print(num1 + num2)\n",
+    "print(num1 - num2)\n",
+    "print(num1 * num2)\n",
+    "print(num1 / num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5dea1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = ['orange', 'apple','pear','banana','kiwi', 'apple']\n",
+    "\n",
+    "print(fruits)\n",
+    "print(fruits[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e597c2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "dq = deque()\n",
+    "\n",
+    "dq.append(\"a\")\n",
+    "dq.append(\"b\")\n",
+    "dq.append(\"c\")\n",
+    "\n",
+    "print(dq)    # deque(['a', 'b', 'c'])"
+   ]
   }
  ],
  "metadata": {
