--- a/08.Conditional/exercise.ipynb
+++ b/08.Conditional/exercise.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "872d283d",
    "metadata": {},
    "outputs": [
@@ -100,9 +100,9 @@
     "if my_name == 'seunghun':\n",
     "    print(\"반가워요\")\n",
     "elif my_name == 'seunghun1':\n",
-    "    print(\"나는 신승훈이다1\")\n",
+    "    print(\"나는 펭귄이다1\")\n",
     "elif my_name == 'seunghun2':\n",
-    "    print(\"나는 신승훈이다2\")\n",
+    "    print(\"나는 펭귄이다2\")\n",
     "else:\n",
     "    print('안반가워요')"
    ]
