--- a/09_Loop/exercise.ipynb
+++ b/09_Loop/exercise.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8fb1567e",
    "metadata": {},
    "outputs": [
@@ -34,22 +34,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "o\n",
-      "h\n",
-      "g\n",
-      "i\n",
-      "r\n",
+      "p\n",
       "a\n",
-      "f\n",
-      "f\n",
-      "e\n",
-      "r\n",
-      "s\n"
+      "n\n",
+      "d\n",
+      "a\n"
      ]
     }
    ],
    "source": [
-    "for word in \"ohgiraffers\":\n",
+    "for word in \"panda\":\n",
     "    print(word)"
    ]
   },
