--- a/10_Branch/exercise.ipynb
+++ b/10_Branch/exercise.ipynb
@@ -146,27 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9f993302",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'break' outside loop (1782960904.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mbreak\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m 'break' outside loop\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요, 늑대님! 무엇을 도와드릴까요?\n"
      ]
     }
    ],
    "source": [
     "customers = ['토끼', '곰', '여우', '호랑이', '늑대']\n",
-    "for customer in customers: #모름\n",
-    "    count = 0\n",
     "\n",
-    "if count == 3:\n",
-    "    print(\"죄송합니다 오늘은 여기까지 입니다\")\n",
-    "    break\n",
+    "count = 0\n",
+    "for customer in customers: #모름\n",
+    "    if count == 3:\n",
+    "        print(\"죄송합니다 오늘은 여기까지 입니다\")\n",
+    "        break\n",
     "\n",
     "print(f\"안녕하세요, {customer}님! 무엇을 도와드릴까요?\")\n",
     "count += 1"
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "56604eb6",
    "metadata": {},
    "outputs": [
@@ -199,22 +198,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{orders}] 주문 확인했습니다!\n",
-      "[{orders}] 주문 확인했습니다!\n",
-      "[{orders}] 주문 확인했습니다!\n",
-      "[{orders}] 주문 확인했습니다!\n",
-      "주문에 문제가 있습니다! 확인이 필요합니다!\n",
-      "[{orders}] 주문 확인했습니다!\n"
+      "['아메리카노', '카페라떼', '핫초코', '모르겠어요', '에스프레소']주문 확인했습니다!\n"
      ]
     }
    ],
    "source": [
     "orders = ['아메리카노', '카페라떼', '핫초코', '모르겠어요', '에스프레소']\n",
-    "for i in orders:    \n",
-    "    if i == '모르겠어요':\n",
-    "    print(\"[{orders}] 주문 확인했습니다!\" )\n",
-    "    if i == '모르겠어요':\n",
-    "        print(\"주문에 문제가 있습니다! 확인이 필요합니다!\")"
+    "for order in orders:    \n",
+    "    if order == \"모르겠어요\":\n",
+    "        print(\"주문에 문제가 있습니다! 확인이 필요합니다.\")\n",
+    "    break\n",
+    "print(f\"{orders}주문 확인했습니다!\")\n",
+    "        \n"
    ]
   },
   {
