--- a/11_Function/exercise.ipynb
+++ b/11_Function/exercise.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "adef3993",
    "metadata": {},
    "outputs": [
@@ -199,8 +199,7 @@
    ],
    "source": [
     "def introduce(name):\n",
-    "    sdfgsdgsfdgggf\n",
-    "    sfdsdfgsfddfgdf\n",
+    "    \n",
     "    return f\"안녕하세요 {name}인사 드립니다.\"\n",
     "\n",
     "result = introduce(\"카피바라\")\n",
@@ -812,6 +811,25 @@
    "outputs": [],
    "source": [
     "result = calculate_salary(5_000_000, 2_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7cf2e58e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "add = lambda x, y: x + y\n",
+    "print(add(3, 5))    # 8"
    ]
   }
  ],
