--- a/13_Instance/exercise.ipynb
+++ b/13_Instance/exercise.ipynb
@@ -44,20 +44,16 @@
     }
    ],
    "source": [
-    "s = Person():\n",
-    "s = print('다람쥐', 900)\n",
-    "s = Person('고릴라', 20)\n",
+    "squirrel = Person('다람쥐', 900)\n",
+    "Gorilla = Person('고릴라', 20)\n",
     "\n",
     "print(squirrel)    # <__main__.Person object at 0x000002E16EE94560>\n",
-    "print(Gorilla) \n",
+    "print(Gorilla)     # <__main__.Person object at 0x000002E16EE94BF0>\n",
     "\n",
-    "\n",
-    "print(squirrel.national())            # korea\n",
+    "print(squirrel.national)            # korea\n",
     "print(squirrel.greeting())          # 안녕하세요\n",
-    "print(Gorilla.information()) \n",
-    "print(Gorilla.favorite())\n",
-    "\n",
-    "\n"
+    "print(Gorilla.information())        # I'm from korea and I use korean. My name is 고릴라. I'm 20\n",
+    "print(Gorilla.favorite('black'))    # I love black"
    ]
   },
   {
