--- a/16_Package/exercise.ipynb
+++ b/16_Package/exercise.ipynb
@@ -359,6 +359,17 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6f99c32a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"newFile2.txt\", \"w\") as f:\n",
+    "    f.write(\"Life is too short, you need python\")"
+   ]
   }
  ],
  "metadata": {
