--- a/17_file/exercise.ipynb
+++ b/17_file/exercise.ipynb
@@ -413,10 +413,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "1cb18a6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. \n",
+      "\u001b[1;31m셀의 코드를 검토하여 가능한 오류 원인을 식별하세요. \n",
+      "\u001b[1;31m자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'>여기</a>를 클릭하세요. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
+    }
+   ],
    "source": [
     "#절대 경로\n",
     "#with open(\"C:/PYTHON/python_basic/17_file/new/fi/le/frog_song.txt\", 'w', encoding='utf-8') as f:\n",
@@ -426,6 +438,14 @@
     "with open(\"./new/fi/le/frog_song.txt\", \"w\", encoding='utf-8') as f:\n",
     "    f.write(\"Life is too short, you need python2\") "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77464c75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
